[tool.black]
line-length = 79

[tool.poetry]
name = "drone"
version = "0.1.0"
description = ""
authors = ["Alex Grytsai <a.grytsai1987@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
flake8 = "^7.2.0"
dronekit = {git = "https://github.com/dronekit/dronekit-python.git"}
dronekit-sitl = {git = "https://github.com/dronekit/dronekit-sitl.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
